workspace-sf/force-app/main/default/objects/Consulta_de_cotacao_de_moeda_estrangeira__c/Consulta_de_cotacao_de_moeda_estrangeira__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Consulta de cotação de moeda estrangeira</label>
</CustomObject>