workspace-sf/force-app/main/default/objects/Consulta_de_cotacao_de_moeda_estrangeira__c/fields/client_secret__c.field-meta.xml
<CustomField>
    <fullName>client_secret__c</fullName>
    <label>client secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>