workspace-sf/force-app/main/default/objects/Consulta_de_cotacao_de_moeda_estrangeira__c/fields/grant_type__c.field-meta.xml
<CustomField>
    <fullName>grant_type__c</fullName>
    <label>grant type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>